# G-Ivan-A-mango-tz-ai-analyzer

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitkeep  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: embedding_config.yaml  export_config.yaml  llm_config.yaml  masking_rules.yaml  parsing_config.yaml  ui_config.yaml
data/: golden_set_v1.jsonl  retrieval_golden_set_v1.jsonl
docs/: CONCEPT.md  DEV_NOTES.md
experiments/: export_excel_engine_check.py  validate_backlog_v1_3.py
knowledge_base/: SOURCES_MANIFEST.md
outputs/: retrieval_eval_report_v1.json
prompts/: README.md  docx_structure_enricher_v1.0.md  few_shot_examples.json  prompt_changelog.md  system_classifier_v1.0.md  system_rag_query_expansion_v1.md  system_rag_reflection_v1.0.md
scripts/: generate_kb_sources.py
src/: app.py  config_loader.py  pipeline.py
test_data/: rag_golden_set.json
tests/: conftest.py  test_app_retry.py  test_arm_deployment_runbook.py  test_audit_trail.py  test_build_index.py  test_chunker.py  test_chunking_contract_docs.py  test_citation_links.py  test_config_encoding.py  test_context_export.py  test_decoding_lock.py  test_docx_parser.py  test_docx_structure_enricher.py  test_env_example_runbook_sync.py  test_env_validation.py  test_error_handler.py  test_evaluate_quality.py  test_evaluate_rag.py  test_excel_exporter.py  test_excel_parser.py  test_export_router.py  test_extract_dependencies.py  test_hybrid_chroma_retriever.py  test_install_first_run.py  test_iterative_retriever.py  test_llm_client.py  (+20 more)
(+105 files in other folders)
