[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-tz-ai-analyzer"
version = "0.1.0"
description = "AI-powered analyzer for tender requirements (TZ) using RAG."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "MANGO Office" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
